--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -3,7 +3,7 @@
     <div class="header-content-inner">
       <h1>Bespoke Software Development</h1>
       <hr>
-      <p>We translate your business requirments into <strong>awesome<strong> software experiences!</p>
+      <p>We translate your business requirments into <strong>awesome</strong> software experiences!</p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
