--- a/_includes/_about.html
+++ b/_includes/_about.html
@@ -8,7 +8,7 @@
           <p class="text-faded">
             Our passion is solving everyday human problems and embracing cutting edge technology.
           </p>
-          <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+          <a href="#contact" class="btn btn-default btn-xl">Get Started!</a>
         </div>
       </div>
     </div>
